--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image Gallery</title>
-  <link rel="stylesheet" href="../../base.css">
-  <link rel="stylesheet" href="gallery.css">
+  <link rel="stylesheet" href="gallery.scss">
 </head>
 
 <body>
