removed node modules, updated file paths

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image Gallery</title>
-  <link rel="stylesheet" href="styles/base.scss">
-  <link rel="stylesheet" href="styles/gallery.scss">
+  <link rel="stylesheet" href="/dist/base.css">
+  <link rel="stylesheet" href="/dist/gallery.css">
 </head>
 
 <body>
@@ -65,7 +65,7 @@
     </div>
   </div>
 
-  <script src="scripts/gallery.js"></script>
+  <script src="/dist/gallery.js"></script>
 </body>
 
 </html>
